@@ -1482,6 +1482,7 @@ void MainWindow::preferencesChanged(void)
 	
 	updateStyleMenu();
 	updateMenu();
+	invalidateView(false);
 }
 
 void MainWindow::on_fileSaveAsAction_triggered()
