@@ -58,7 +58,7 @@ class BrowserWebPage : public QWebPage
 		int ox, oy, sw, sh;
 };
 
-class BrowserImageManager : public QObject, public IImageManager
+class BrowserImageManager : public QThread, public IImageManager
 {
 	Q_OBJECT;
 	public:
@@ -120,12 +120,12 @@ class BrowserImageManager : public QObject, public IImageManager
 
 		QQueue<LoadingRequest> loadingRequests;
 		bool requestActive;
+		int requestDuration;
 		void launchRequest();
 
 		static BrowserImageManager* m_BrowserImageManagerInstance;
 
 		//QNetworkProxy* proxy;
-		QWebView *browser;
 		BrowserWebPage* page;
 		QWebFrame *frame;
 		QNetworkAccessManager* qnam;
@@ -139,6 +139,10 @@ class BrowserImageManager : public QObject, public IImageManager
 	private slots:
 		void pageLoadFinished(bool);
 		void slotLoadProgress(int p);
+		void checkRequests();
+
+	protected:
+		virtual void run();
 };
 
 #endif
